Setting up the footer-grid

--- a/index.html
+++ b/index.html
@@ -13,33 +13,35 @@
     <!-- The footer section must stay at the bottom of the page -->
     <!-- Footer grid for the footer content -->
     <footer class="footer-grid-container">
-        <!-- Subcribe to the mailing list, prevent form default and use js to complete the submission to avoid a page reload -->
-        <div class="signup-form-container">
-            <h1 class="signup-form-heading">Subscribe to our newsletter for updates</h2>
-            <form id="signup-form-id" class="signup-form">
-                <input type="email" placeholder="Email Address" required>
-                <button type="submit">Subscribe</button>
-            </form>
+        <div class="footer-grid">
+            <!-- Subcribe to the mailing list, prevent form default and use js to complete the submission to avoid a page reload -->
+            <div class="signup-form-container">
+                <h2 class="signup-form-heading">Subscribe to our newsletter for updates</h2>
+                <form id="signup-form-id" class="signup-form">
+                    <input type="email" placeholder="Email Address" required>
+                    <button type="submit">Subscribe</button>
+                </form>
+            </div>
+            <!-- Navigation to the different sections on the page -->
+            <div class="quick-links-container">
+                <h4 class="quick-links-heading">Quick Link</h4>
+                <nav class="quick-links-nav">
+                    <a href="#home"><p class="quick-links-text">Home</p></a>
+                    <a href="#who-are-we"><p class="quick-links-text">Who Are We</p></a>
+                    <a href="#philosophy"><p class="quick-links-text">Our Philosophy</p></a>
+                </nav>
+            </div>
+            <!-- Navigation to the different technologies on the page -->
+            <div class="technologies-container">
+                <h4 class="technologies-heading">Technologies</h4>
+                <nav class="technologies-nav">
+                    <a href="#html"><p class="technologies-text">HTML</p></a>
+                    <a href="#css"><p class="technologies-text">CSS</p></a>
+                    <a href="#javascript"><p class="technologies-text">JavaScript</p></a>
+                </nav>
+            </div>
         </div>
-        <!-- Navigation to the different sections on the page -->
-        <div class="quick-links-container">
-            <h6 class="quick-links-heading">Quick Link</h6>
-            <nav class="quick-links-nav">
-                <a href="#home"><p class="quick-links-text">Home</p></a>
-                <a href="#who-are-we"><p class="quick-links-text">Who Are We</p></a>
-                <a href="#philosophy"><p class="quick-links-text">Our Philosophy</p></a>
-            </nav>
-        </div>
-        <!-- Navigation to the different technologies on the page -->
-        <div class="technologies-container">
-            <h6 class="technologies-heading">Technologies</h6>
-            <nav class="technologies-nav">
-                <a href="#html"><p class="technologies-text">HTML</p></a>
-                <a href="#css"><p class="technologies-text">CSS</p></a>
-                <a href="#javascript"><p class="technologies-text">JavaScript</p></a>
-            </nav>
-        </div>
-
+        
     </footer>
     
 </body>
