--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <h2 class="signup-form-heading">Subscribe to our newsletter for updates</h2>
                 <form id="signup-form-id" class="signup-form">
                     <input type="email" placeholder="Email Address" required>
-                    <button type="submit">Subscribe</button>
+                    <button type="submit" class="btn-submit">Subscribe</button>
                 </form>
             </div>
             <!-- Navigation to the different sections on the page -->
@@ -40,9 +40,7 @@
                     <a href="#javascript"><p class="technologies-text">JavaScript</p></a>
                 </nav>
             </div>
-        </div>
-        
-    </footer>
-    
+        </div>      
+    </footer>  
 </body>
 </html>
